<resources>
    <string name="app_name">Menace</string>

    <string name="subtitle">Destroy the threats</string>
    <string name="login">Login</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="quit">Quit</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_score">ScoreActivity</string>
    <string name="scoreboard">Scoreboard</string>

    <string name="launch_screen_title">Game : launch screen</string>
    <string name="txt_instructions">\n Instructions : \n First :\n Next :</string>
    <string name="time_elapsed">Time elapsed</string>
</resources>