<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_backgroung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"></Button>

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/quit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tV_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/subtitle"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/btn_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"/>
    </LinearLayout>


</LinearLayout>